Added sections about iterative writing

--- a/output/backend.html
+++ b/output/backend.html
@@ -590,6 +590,7 @@ deb-src http://mirrors.digitalocean.com/debian stretch-backports main contrib no
 </li>
 </ol>
 </section><section id="skriva"><h2><a href="#skriva">Skriva</a></h2>
+<p>Vi fortsätter iterativt med att förbättra vårt akademiska skrivande. Använd den återkopplingen du fick på första och andra veckans text och förbättra din introduktion.</p>
 </article></section></div>    </main>
 
     <footer class="footer" id="footer">
