--- a/output/ux.html
+++ b/output/ux.html
@@ -34,8 +34,7 @@
 </section><section id="titta"><h2><a href="#titta">Titta</a></h2>
 </section><section id="kravspecifikation"><h2><a href="#kravspecifikation">Kravspecifikation</a></h2>
 </section><section id="skriva"><h2><a href="#skriva">Skriva</a></h2>
-<p>Vi fortsätter iterativt med att förbättra vårt akademiska skrivande genom att ytterligare en gång skriva en introduktion till en teknik. Vi ser till att ta till vara på den feedback och återkoppling vi fick under första veckan och förbättrar därigenom texten.</p>
-<p>Veckans teknik som vi ska skriva en introduktion om är UX och hur just du applicerade UX principer i din kod.</p>
+<p>Vi fortsätter iterativt med att förbättra vårt akademiska skrivande. Använd den återkopplingen du fick på första veckans text och förbättra din introduktion.</p>
 </article></section></div>    </main>
 
     <footer class="footer" id="footer">
