--- a/output/frontend.html
+++ b/output/frontend.html
@@ -230,9 +230,10 @@ return m(&quot;div.square&quot;,
 </li>
 </ol>
 </section><section id="skriva"><h2><a href="#skriva">Skriva</a></h2>
-<p>Vi ska i denna kurs träna på akademiskt skrivande och kommer i vecka 1 &amp; 2 fokusera på bakgrund och introduktion. Vi kommer använda oss av en iterativ process för att förbättra vårt akademiska skrivande inför kommande exjobb.</p>
-<p>I ett akademiskt arbete fyller bakgrunden och introduktionen en viktig funktionen. Introduktionen skapar grunden och utgångspunkten för vår diskussion och sammanfattning där vi sätter vårt arbete i relation till nuvarande forskning. Därför är det viktigt att vi i introduktionen berättar för vår läsare hur det ligger till med den nuvarande forskningen i området.</p>
-<p>Skriv en kort introduktion till det ramverk som du har valt. Använd referenser på ett akademiskt sätt.</p>
+<p>Vi ska i denna kurs träna på akademiskt skrivande och kommer i vecka 1, 2 &amp; 3 fokusera på bakgrund och introduktion. Vi kommer använda oss av en iterativ process för att förbättra vårt akademiska skrivande inför kommande exjobb.</p>
+<p>I ett akademiskt arbete fyller bakgrunden och introduktionen en viktig funktionen. Introduktionen skapar grunden och utgångspunkten för vår diskussion och sammanfattning där vi sätter vårt arbete i relation till nuvarande forskning. Därför är det viktigt att vi i introduktionen berättar för vår läsare om läget på den nuvarande forskningen i området.</p>
+<p>Skriv en kort introduktion till det ramverk som du har valt. Använd referenser på ett akademiskt sätt. Se denna texten som ett första utkast, vi kommer under de kommande två veckorna förbättra texten.</p>
+<p>Du får skriva inttroduktionen på antigen svenska eller engelska. Du väljer själv på vilket sätt och med teknik du vill skriva texten. Under föreläsningen går Emil igenom ett antal olika sätt att skriva texten.</p>
 </section><section id="sammanfattning"><h2><a href="#sammanfattning">Sammanfattning</a></h2>
 <p>Vi har nu skrapat ytan på JavaScript ramverken Angular, Mithril, React och Vue, samt jämfört ramverken med vanilla JavaScript. Vi avslutar denna vecka med en video där den tidigare BDFL för <a href="https://www.djangoproject.com/">django</a> pratar om hur vi inte alltid behöver ett JavaScript ramverk.</p>
 <div class='embed-container'><iframe src="https://www.youtube.com/embed/k7n2xnOiWI8" frameborder="0" allowfullscreen></iframe></div>
