--- a/output/backend.html
+++ b/output/backend.html
@@ -496,7 +496,6 @@ app.use('/hello', hello);
 </code></pre>
 <p>På det sättet håller vi <code>app.js</code> liten i storlek och var sak har sin plats.</p>
 <h4 id="driftsattning"><a href="#driftsattning">Driftsättning</a></h4>
-<p>PM2???</p>
 <p>Vi börjar med att klona vårt repo till servern. Använd https länken när du klonar för enklast hantering. Jag har skapat en katalog <code>~/git</code> där jag klonar mitt repo till. När du har klonat repot kan du göra <code>npm install</code> så alla moduler är installerat.</p>
 <p>För att våra klienter ska komma åt API:t ser vi till att driftsätta det på vår server. Vi ska använda oss av det som kallas en nginx reverse proxy för att trafiken utifrån på port 80 eller 443 (vanliga portarna för HTTP och HTTPS) ska skickas till vårt API som ligger och lyssnar på en annan port.</p>
 <p>När vi installerade nginx fick vi med oss ett antal olika kataloger och konfigurationsfiler. I katalogen <code>/var/www</code> kommer vi skapa kataloger för de webbplatser vi vill skapa på vår server. Vi börjar med att logga in på servern som <code>deploy</code> och skapar en katalog för vårt API.</p>
@@ -539,6 +538,12 @@ sudo service nginx restart
 <p>För att internet ska veta att vi har en server som ligger här och vill svara på förfrågningar skapar vi en subdomän i Digital Ocean gränssnittet. Gå till Networking och välj din domän skriv sedan in din subdomän välj din droplet och skapa subdomänen.</p>
 <p>[FIGURE src=image/ramverk2/do-subdomain.png?w=w3 caption=“Digital Ocean subdomän”]</p>
 <p>Det ska nu gå att se ett JSON svar från API:t om vi går till vår subdomän. Ibland kan det ta en liten stund innan subdomäner kommer på plats, så avvakta lite grann om det inte syns direkt.</p>
+<h4 id="process-manager"><a href="#process-manager">Process manager</a></h4>
+<p>Vi vill i mångt och mycket automatisera hur vi startar, uppdaterar och startar om våra nodejs applikationer. För detta ändamålet använder vi en process manager. Det finns ett antal olika <a href="https://expressjs.com/en/advanced/pm.html">process managers för express applikationer</a>, men jag har valt att använda <a href="http://pm2.keymetrics.io/">PM2</a>.</p>
+<p>Vi installerar PM2 med kommandot:</p>
+<pre><code class="language-bash">npm install -g pm2
+</code></pre>
+<p>Vi går sedan till katalogen där vi startade vårt me-api och</p>
 <h4 id="https"><a href="#https">HTTPS</a></h4>
 <p>Då vi är medvetna om våra användares privatliv vill vi att alla anslutningar till våra tjänster och services sker över HTTPS, som krypterar den data som skickas. Vi behöver därför installera ett certifikat. Vi väljer att använda ett certifikat från <a href="https://letsencrypt.org/">Let’s Encrypt</a> och vi installerar det med tjänsten <a href="https://certbot.eff.org/">Certbot</a> då vi har tillgång till serverns CLI.</p>
 <p>Vi behöver först öppna upp så vi kan installera paket från det som heter APT backports. Vi öppnar upp filen <code>/etc/apt/sources.list</code> och letar reda på följande två rader som vi avkommenterar. Raderne brukar finnas längst ner i filen.</p>
@@ -577,16 +582,16 @@ deb-src http://mirrors.digitalocean.com/debian stretch-backports main contrib no
 <h4 id="del-2:-frontend"><a href="#del-2:-frontend">Del 2: Frontend</a></h4>
 <ol>
 <li>
-<p>Din frontend Me-applikation från vecka 1 och 2 ska nu hämta redovisningstexter från Me-API:t.</p>
+<p>Din frontend Me-applikation från vecka 1 och 2 ska hämta redovisningstexter från Me-API:t.</p>
 </li>
 <li>
-<p>Committa alla filer och lägg till en tagg (3.0.0) med hjälp av <code>npm version 3.0.0</code>. Det skapas automatiskt en motsvarande tagg i ditt GitHub repo. Lägg till fler taggar efterhand som det behövs. Var noga med din committ-historik.</p>
+<p>Committa alla filer och lägg till en tagg (3.0.0) med hjälp av <code>npm version 3.0.0</code>. Det skapas automatiskt en motsvarande tagg i ditt GitHub repo. Lägg till fler taggar efterhand som det behövs. Var noga med din commit-historik.</p>
 </li>
 <li>
 <p>Pusha upp repot till GitHub, inklusive taggarna.</p>
 </li>
 <li>
-<p>Publicera ditt API publikt och lägg den publika adressen i din inlämning på Canvas.</p>
+<p>Publicera din Me-applikation publikt och lägg den publika adressen i din inlämning på Canvas. I artikeln <a href="deploy-frontend.html">Driftsätta din Me-applikation</a> finns information om hur du driftsätter en Me-applikation i ditt valda frontend ramverk.</p>
 </li>
 </ol>
 </section><section id="skriva"><h2><a href="#skriva">Skriva</a></h2>
